alter phpstan.neon / add a test.php in .gitignore / create a child of AbstractManager->ListModel.php and method to insert list in DB

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,3 +1,8 @@
 parameters:
-	ignoreErrors:
-		- '#Constant [A-Z_]+ not found.#'
+    level: max
+    paths:
+        - src
+    ignoreErrors:
+        -
+            message: '#Constant [A-Z_]+ not found.#'
+            path: src
